java and gradle upgrade