@@ -2,22 +2,20 @@ package com.krabi;
 
 import com.auth0.jwk.JwkProvider;
 import com.auth0.jwk.JwkProviderBuilder;
-import com.auth0.jwk.JwkException;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.exceptions.JWTVerificationException;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import com.auth0.jwt.interfaces.JWTVerifier;
 import io.vertx.core.Future;
-import io.vertx.core.Promise;
 import io.vertx.core.Vertx;
 import io.vertx.core.json.JsonObject;
 import software.amazon.awssdk.services.cognitoidentityprovider.CognitoIdentityProviderClient;
 import software.amazon.awssdk.services.cognitoidentityprovider.model.*;
 
-import java.net.URL;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.security.interfaces.RSAPublicKey;
-import java.util.HashMap;
 import java.util.Map;
 
 import org.slf4j.Logger;
@@ -31,7 +29,7 @@ public class CognitoAuthService {
     private final CognitoIdentityProviderClient cognitoClient;
     private final Vertx vertx;
     private JwkProvider jwkProvider;
-    private Map<Algorithm, JWTVerifier> publicKeyMap = new HashMap<>();
+    private Map<Algorithm, JWTVerifier> algorithmMap = new java.util.concurrent.ConcurrentHashMap<>();
 
     public CognitoAuthService(Vertx vertx, String userPoolId, String clientId, String region) {
         this.vertx = vertx;
@@ -48,105 +46,65 @@ public class CognitoAuthService {
         try {
             String jwksUrl = String.format("https://cognito-idp.%s.amazonaws.com/%s/.well-known/jwks.json", region,
                     userPoolId);
-            this.jwkProvider = new JwkProviderBuilder(new URL(jwksUrl)).build();
-        } catch (Exception e) {
+            this.jwkProvider = new JwkProviderBuilder(new URI(jwksUrl).toURL()).build();
+        } catch (MalformedURLException | java.net.URISyntaxException e) {
             throw new RuntimeException("Failed to initialize JWK provider", e);
         }
     }
 
-    @SuppressWarnings("deprecation")
     public Future<JsonObject> validateToken(String token) {
-        Promise<JsonObject> promise = Promise.promise();
         // Don't remove blocking calls, this will break authentification
-        vertx.executeBlocking(blockingCodeHandler -> {
-            try {
-                DecodedJWT jwt = JWT.decode(token);
-                // Verify the token signature
-                RSAPublicKey publicKey = (RSAPublicKey) jwkProvider.get(jwt.getKeyId()).getPublicKey();
-                Algorithm algorithm = Algorithm.RSA256(publicKey, null);
-                JWTVerifier verifier = publicKeyMap.get(algorithm);
-                if (verifier == null) {
-                    verifier = JWT.require(algorithm)
-                            .withIssuer(String.format("https://cognito-idp.%s.amazonaws.com/%s", region, userPoolId))
-                            .build();
-                    publicKeyMap.put(algorithm, verifier);
-                }
-                DecodedJWT verifiedJwt = verifier.verify(token);
+        return vertx.executeBlocking(() -> {
+            DecodedJWT jwt = JWT.decode(token);
+            // Verify the token signature
+            RSAPublicKey publicKey = (RSAPublicKey) jwkProvider.get(jwt.getKeyId()).getPublicKey();
+            Algorithm algorithm = Algorithm.RSA256(publicKey, null);
+            JWTVerifier verifier = algorithmMap.computeIfAbsent(algorithm, alg -> JWT.require(alg)
+                    .withIssuer(String.format("https://cognito-idp.%s.amazonaws.com/%s", region, userPoolId))
+                    .build());
+            DecodedJWT verifiedJwt = verifier.verify(token);
 
-                // Accept if either aud or client_id matches clientId
-                boolean audOk = false;
-                if (verifiedJwt.getAudience() != null && !verifiedJwt.getAudience().isEmpty()) {
-                    audOk = verifiedJwt.getAudience().contains(clientId);
-                }
-                boolean clientIdOk = false;
-                if (verifiedJwt.getClaim("client_id") != null && !verifiedJwt.getClaim("client_id").isMissing()) {
-                    clientIdOk = clientId.equals(verifiedJwt.getClaim("client_id").asString());
-                }
-                if (!audOk && !clientIdOk) {
-                    throw new JWTVerificationException(
-                            "Token audience (aud) or client_id does not match application client ID");
-                }
+            // Accept if either aud or client_id matches clientId
+            boolean audOk = verifiedJwt.getAudience() != null && verifiedJwt.getAudience().contains(clientId);
+            boolean clientIdOk = clientId.equals(verifiedJwt.getClaim("client_id").asString());
 
-                // Extract user information
-                JsonObject userInfo = new JsonObject()
-                        .put("sub", verifiedJwt.getSubject())
-                        .put("email", verifiedJwt.getClaim("email").asString())
-                        .put("username", verifiedJwt.getClaim("cognito:username").asString())
-                        .put("groups", verifiedJwt.getClaim("cognito:groups").asList(String.class));
-
-                logger.info("token validated, user info {}", userInfo.encodePrettily());
-                blockingCodeHandler.complete(userInfo);
-            } catch (JWTVerificationException | JwkException e) {
-                blockingCodeHandler.fail(e);
+            if (!audOk && !clientIdOk) {
+                throw new JWTVerificationException(
+                        "Token audience (aud) or client_id does not match application client ID");
             }
-        }, result -> {
-            if (result.succeeded()) {
-                promise.complete((JsonObject) result.result());
-            } else {
-                promise.fail(result.cause());
-            }
+
+            // Extract user information
+            JsonObject userInfo = new JsonObject()
+                    .put("sub", verifiedJwt.getSubject())
+                    .put("email", verifiedJwt.getClaim("email").asString())
+                    .put("username", verifiedJwt.getClaim("cognito:username").asString())
+                    .put("groups", verifiedJwt.getClaim("cognito:groups").asList(String.class));
+
+            logger.info("token validated, username: {}", userInfo.getString("username"));
+            return userInfo;
         });
-
-        return promise.future();
     }
 
     // this method authenticateUser not used as authentication handled by frontend
-    @SuppressWarnings("deprecation")
     public Future<JsonObject> authenticateUser(String username, String password) {
-        Promise<JsonObject> promise = Promise.promise();
+        return vertx.executeBlocking(() -> {
+            InitiateAuthRequest authRequest = InitiateAuthRequest.builder()
+                    .authFlow(AuthFlowType.USER_PASSWORD_AUTH)
+                    .clientId(clientId)
+                    .authParameters(Map.of("USERNAME", username, "PASSWORD", password))
+                    .build();
 
-        vertx.executeBlocking(blockingCodeHandler -> {
-            try {
-                InitiateAuthRequest authRequest = InitiateAuthRequest.builder()
-                        .authFlow(AuthFlowType.USER_PASSWORD_AUTH)
-                        .clientId(clientId)
-                        .authParameters(Map.of(
-                                "USERNAME", username,
-                                "PASSWORD", password))
-                        .build();
+            InitiateAuthResponse authResponse = cognitoClient.initiateAuth(authRequest);
 
-                InitiateAuthResponse authResponse = cognitoClient.initiateAuth(authRequest);
-
-                if (authResponse.authenticationResult() != null) {
-                    JsonObject result = new JsonObject()
-                            .put("accessToken", authResponse.authenticationResult().accessToken())
-                            .put("idToken", authResponse.authenticationResult().idToken())
-                            .put("refreshToken", authResponse.authenticationResult().refreshToken());
-                    blockingCodeHandler.complete(result);
-                } else {
-                    blockingCodeHandler.fail("Authentication failed");
-                }
-            } catch (Exception e) {
-                blockingCodeHandler.fail(e);
-            }
-        }, result -> {
-            if (result.succeeded()) {
-                promise.complete((JsonObject) result.result());
+            if (authResponse.authenticationResult() != null) {
+                return new JsonObject()
+                        .put("accessToken", authResponse.authenticationResult().accessToken())
+                        .put("idToken", authResponse.authenticationResult().idToken())
+                        .put("refreshToken", authResponse.authenticationResult().refreshToken());
             } else {
-                promise.fail(result.cause());
+                throw new RuntimeException("Authentication failed");
             }
         });
-        return promise.future();
     }
 
     public void close() {
